src/scss/03-widgets/_popover.scss
/*! Widgets - Popover */
////
/// @group Widgets-Popover
/// Widgets - Popover

///
[data-popover] {
	& > .popover {
		&-top {
			border: var(--border-size-none);
			padding: var(--space-none);
		}

		&-bottom {
			background-color: var(--color-neutral-0);
			border: var(--border-size-s) solid var(--color-neutral-4);
			border-radius: var(--border-radius-soft);
			box-shadow: var(--shadow-s);
			color: var(--color-neutral-9);
			max-width: 350px;
			min-width: auto;
			padding: var(--space-base);
		}
	}
}

// IsRTL -------------------------------------------------------------------------
///
.is-rtl {
	[data-popover] {
		& > .popover {
			&-top {
				display: inline;
			}

			&-bottom {
				margin-left: initial;
				margin-right: -50%;
				transform: translateX(50%) !important;
			}
		}
	}
}

